DASH-452 Fix transaction fees title for domain unwrap page

--- a/client/src/pages/UnwrapDomainPage/styles/UnwrapDomainForm.module.scss
+++ b/client/src/pages/UnwrapDomainPage/styles/UnwrapDomainForm.module.scss
@@ -5,7 +5,7 @@
   margin-top: 1em;
   .transactionTitle {
     font-size: 0.875em;
-    margin-bottom: -16px;
+    margin-bottom: 1rem;
     color: $dark-jungle-green;
     align-self: flex-start;
     @include sf-pro-display-medium;
